[gd_scene load_steps=8 format=3 uid="uid://cfnpna6gscfpo"]

[ext_resource type="Script" path="res://Scenes/Terrain/Barrel.gd" id="1_e78gn"]
[ext_resource type="Texture2D" uid="uid://cj66rnc8hejwo" path="res://Assets/sprites/Debris02.png" id="2_5uc04"]
[ext_resource type="PackedScene" path="res://Scenes/Key Prompts/barrel_prompt.tscn" id="3_n0gtd"]
[ext_resource type="PackedScene" uid="uid://crvxee1mdlq7c" path="res://Scenes/Pickups/ItemSpawner.tscn" id="4_ngbib"]
[ext_resource type="PackedScene" uid="uid://q4m8o6kfry5q" path="res://Scenes/Pickups/pickup_flamethrower.tscn" id="5_yrvsm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vbefu"]
radius = 44.2857
height = 345.714

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_660wl"]
radius = 96.0
height = 304.0

[node name="Barrel" type="StaticBody2D"]
z_index = -1
script = ExtResource("1_e78gn")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_5uc04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 9)
rotation = 1.5708
scale = Vector2(0.7, 0.7)
shape = SubResource("CapsuleShape2D_vbefu")

[node name="BarrelPrompt" parent="." instance=ExtResource("3_n0gtd")]
unique_name_in_owner = true
position = Vector2(0, -53)

[node name="BarrelHurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrelHurtBox"]
position = Vector2(-8, 48)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_660wl")
debug_color = Color(0, 0.643137, 0.266667, 0.419608)

[node name="ItemSpawner" parent="." instance=ExtResource("4_ngbib")]
unique_name_in_owner = true
position = Vector2(0, 32)
pickup = ExtResource("5_yrvsm")
launch_duration = 0.5

[connection signal="area_entered" from="BarrelHurtBox" to="." method="_on_barrel_hurt_box_area_entered"]
